refactor(plugin): 移动 ConsolePrinter 插件包并优化代码
- 将 ConsolePrinterPlugin 和 ConsolePrinterProperties 文件重命名并移动到 console 包
- 更新相关 Java 文件的包名和导入语句
- 在 ChannelMonitorService 中使用方法引用和 getFirst() 方法替代旧语法
- 更新测试文件以匹配新的包结构和类引用